Adios, construction.gif

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
 <body>
         <div class="section" id="plan">
+                <img src="git.png" alt="Git" />
+
                 <h1>Practicing Git at University of Arizona</h1>
-                <div class="minileft">
-                        <div><img src="hammer.gif" /></div>
-                        <div><img src="construction.gif" /></div>
-                </div>
 
 		<p>Ready to learn about version control through git?  You can 
 		<a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Practicing_Git/Students">follow along here</a>.</p>
